minor changes for gh pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instart-react",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://sirius93.github.io/instart/",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
