--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "instart-react",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://sirius93.github.io/instart/",
+  "homepage": "https://sirius93.github.io/instart/",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "node-sass-chokidar": "^1.3.0",
+    "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-modal-video": "^1.2.0",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-form": "^7.3.0",
     "react-paginate": "^5.2.4",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8"
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-form": "^7.3.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
